--- a/src/pages/Home/Home/Home.css
+++ b/src/pages/Home/Home/Home.css
@@ -1,11 +1,11 @@
 #app {
     height: 100%;
   }
-  html,
+  /* html,
   body {
     position: relative;
     height: 100%;
-  }
+  } */
   
   body {
     background: #eee;
